src/components/slideMenu/SlideMenu.scss
@use "../../constants/variables" as v;

.slide-menu {
  transform: translateX(110vw);
  position: absolute;
  overflow: hidden;
}

@media (max-width: 768px) {
  .slide-menu {
    display: none;
  }
}

@media (max-width: 550px) {
  .slide-menu {
    display: block;
    padding: 32px;
    position: fixed;
    right: 0;
    height: 100vh;
    width: 274px;

    transition: 250ms ease;

    transform: translateX(280px);

    background: rgba(255, 255, 255, 0.04);
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(8.4px);
    -webkit-backdrop-filter: blur(8.4px);

    &.active {
      transform: translateX(0);
    }

    &__header {
      display: flex;
      justify-content: flex-end;

      &-closeBtn {
        background-color: transparent;
        margin-bottom: 64px;
        height: 23px;
        width: 23px;

        & > img {
          height: 100%;
          width: 100%;
        }
      }
    }

    &__body {
      display: flex;
      flex-direction: column;
      gap: 32px;

      &-link {
        color: v.$white;
        font-family: v.$fontBarlow;
        font-size: 20px;

        & > a {
          position: relative;
          display: flex;
          gap: 12px;

          &::after {
            position: absolute;
            opacity: 0;
            right: -30px;
            background-color: #fff;
            height: 100%;
            width: 3px;
            content: "";
          }

          &.active::after {
            opacity: 1;
          }

          & > span {
            font-weight: 700;
          }
        }
      }
    }
  }
}

